# Algorytmy

./: CMakeLists.txt  main.cpp
Struktury/: Graf.cpp  Graf.h
Struktury/BellmanFord/: BF.cpp  BF.h
Struktury/Dijkstra/: Dijkstra.cpp  Dijkstra.h
Struktury/Kruskal/: Kruskal.cpp  Kruskal.h
Struktury/Prima/: Prima.cpp  Prima.h
