cmake_minimum_required(VERSION 3.24)
project(SDiZOPROJEKT2)

set(CMAKE_CXX_STANDARD 17)

add_executable(SDiZOPROJEKT2 main.cpp  Struktury/Tablica/tablica.h Struktury/Dijkstra/Dijkstra.cpp Struktury/Dijkstra/Dijkstra.h Struktury/Prima/Prima.cpp Struktury/Prima/Prima.h Struktury/Kopiec/kopiec.cpp Struktury/Graf.cpp Struktury/Graf.h Struktury/Lista/lista.cpp Struktury/Lista/lista.h Struktury/Lista/listaElement.h Struktury/Lista/listaElement.cpp Struktury/Kruskal/Kruskal.cpp Struktury/Kruskal/Kruskal.h Struktury/BellmanFord/BF.cpp Struktury/BellmanFord/BF.h )
